welcome.lessons.welcome.traversal.diagonal.TraversalDiagonal.scala.error
Diagonal:25: error: ')' expected but 'while' found.
  while ((getX(),getY()) != (getMondeLargeur() -1 , getMondeHauteur() -1))
  ^